# regen-lang

./: .gitignore  Cargo.toml  Justfile  README.md  gen_sdk.py  regen.grammar  regen.regen.txt  rustfmt.toml
docs/: CNAME  index.html  index.html.txtpp  regen_syntax.html  regen_syntax.html.pp  test.footer.html  test.header.html
examples/: pt_html.rs
sdk/: sdk.rs
src/: emit.rs  grammar.rs  grammar.rs.pp  lib.rs  main.rs  sdk_generated.rs
src/core/: ctx.rs  expr.rs  hook.rs  lang.rs  mod.rs  param.rs  rule.rs  semantic.rs  token.rs
src/core/lang/: mod.rs  validate.rs
src/dynamic/: dyn_lang.rs  dyn_node.rs  mod.rs
src/emit/: code.rs  default.html  emitter.rs  html.rs  mod.rs  rust.rs  visitor.rs
src/emit/sdk/: mod.rs  rust.rs
src/sdk/: ast_parser.rs  context.rs  env.rs  gen.rs  generated.rs  generated.rs.pp  grammar.rs  grammar.rs.pp  mod.rs  parse_tree.rs  semantic.rs  token.rs  util.rs
src/sdk/env/: base.rs  env_environment.rs  mod.rs
src/sdk/token/: lex.rs  mod.rs  token_blocks.rs  token_stream.rs  token_type.rs
