[package]
name = "regen-lang"
version = "0.0.1"
edition = "2021"
description = "TODO description.."
# repository = ""
license = "GPL-3.0-or-later"
authors = ["iTNTPiston <terrabyte100k@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.2.1", features = ["derive", "cargo"] }
regex = "^1.7.3"
html-escape = "^0.2.13"
heck = "^0.4.1"

[[bin]]
name = "regen"
path = "src/main.rs"

[lib]
name = "regen"
path = "src/lib.rs"