[package]
name = "regen-lang"
version = "0.0.7"
edition = "2021"
description = "A language for defining languages"
repository = "https://github.com/Pistonite/regen-lang"
license = "GPL-3.0-or-later"
authors = ["Pistonite <terrabyte100k@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.2.1", features = ["derive", "cargo"], optional = true }
regex = "^1.7.3"
html-escape = "^0.2.13"
heck = "^0.4.1"
codize = "^0.1.2"
thiserror = "1.0.44"

[features]
default = ["clap"]

[[bin]]
name = "regen"
path = "src/main.rs"
required-features = ["clap"]

[[example]]
name = "pt_html"

[lib]
name = "regen"
path = "src/lib.rs"
